--- a/src/styles/components/MCSelect.scss
+++ b/src/styles/components/MCSelect.scss
@@ -1,6 +1,7 @@
 $scale: 1;
 
 .MCSelect {
+    cursor: pointer;
     font-family: inherit;
     font-size: #{$scale}rem;
     height: calc(1.2em + calc(4 * calc(var(--pixel-size) * #{$scale})));
@@ -22,6 +23,7 @@ $scale: 1;
         border-style: solid;
         border-image: url("/img/gui/border_select_open.png") 2 fill;
         border-width: calc(var(--pixel-size) * #{$scale});
+        // z-index: 1000;
     }
 
     // styling the visibility for states
